# bingwallpaper

./: Cargo.toml  LICENSE  README.md  flake.nix
src/: bingwallpaper.rs  image.rs  lib.rs  main.rs  tooltips.rs
