[package]
name = "bingwallpaper"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.89"
serde = "1.0.151"
serde_derive = "1.0.151"
reqwest = { version = "0.10.10", features = ["json"] }
wallpaper = "3.2.0"
tokio = { version = "0.2.25", features = ["macros"] }
